<resources>
    <string name="app_name">daneshjooyar</string>
    <string name="phone_number">شماره موبایل</string>
    <string name="edit_number">ویرایش شماره</string>
    <string name="text_error_code">کد تایید وارد شده نامعتبر است.</string>
    <string name="ghavanin_daneshjooyar">قوانین دانشجویار</string>
    <string name="document">مدارک</string>
    <string name="about_as">درباره ما</string>
    <string name="home">خانه</string>
    <string name="wi_fi">اینترنت Wi_Fi</string>
    <string name="internet_mobile">اینترنت موبایل</string>
    <string name="dialog_connect_internet">به اینترنت متصل نیستید. برای استفاده از اپلیکیشن به انترنت متصل شوید.</string>
    <string name="connect_to_internet">اتصال به اینترنت</string>
    <string name="send">ارسال</string>
    <string name="text_message">متن پیام…</string>
    <string name="title">عنوان</string>
    <string name="send_message_to_support">ارسال پیام به پشتیبانی</string>
    <string name="instagram">اینستاگرام</string>
    <string name="youtube">یوتیوب</string>
    <string name="attributes">ویژگی ها</string>
    <string name="social_media">شبکه های اجتماعی</string>
    <string name="information">اطلاعات</string>
    <string name="videos">ویدئو ها</string>
    <string name="who_do_we_learn_from">از کی یاد میگیریم؟</string>
    <string name="progress_percentage">درصد پیشرفت</string>
    <string name="_100">/100%</string>
    <string name="next">قسمت بعدی</string>
    <string name="preview">قسمت قبلی</string>
    <string name="guide">راهنما</string>
    <string name="text_not_end_course">شما هنوز مدرکی ندارید \n چون دوره ای را به پایان نرسانده اید.</string>
    <string name="showCourses">مشاهده دوره ها</string>
    <string name="_0">0</string>
</resources>