<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back_dialog_support">

    <Button
        android:id="@+id/btn_send"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/back_button"
        android:padding="12dp"
        android:text="@string/send"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/back_edt_support"
        android:hint="@string/title"
        android:maxLength="50"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textDirection="rtl"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/edt_message"
        app:layout_constraintEnd_toEndOf="@+id/edt_message"
        app:layout_constraintStart_toStartOf="@+id/edt_message" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_message"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/back_edt_support"
        android:gravity="start"
        android:hint="@string/text_message"
        android:maxLength="500"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textDirection="rtl"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_send"
        app:layout_constraintEnd_toEndOf="@+id/btn_send"
        app:layout_constraintStart_toStartOf="@+id/btn_send" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/send_message_to_support"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edt_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/cancel"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="12dp"
        android:layoutDirection="ltr"
        app:layout_constraintBottom_toBottomOf="@+id/text_view"
        app:layout_constraintEnd_toEndOf="@+id/edt_title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>