<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@null"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:background="#75000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <View
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/connect_to_internet" />

    <Button
        android:id="@+id/wifi_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_button"
        android:text="@string/wi_fi"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@null"
        android:layout_margin="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mobile_internet"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mobile_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/internet_mobile"
        android:textSize="20sp"
        android:layout_margin="18dp"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/wifi_internet" />

    <TextView
        android:id="@+id/dialog_connect_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="12dp"
        android:text="@string/dialog_connect_internet"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/mobile_internet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/dialog_connect_internet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img_no_internet" />

    <TextView
        android:paddingTop="12dp"
        android:id="@+id/connect_to_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_to_internet"
        android:layout_margin="12dp"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/appCompatImageView"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>