<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="ltr"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layoutDirection="ltr"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image_daneshjooyar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layoutDirection="rtl"
            android:layout_width="match_parent"
            android:layout_height="296dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:text="@string/attributes"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/image_about" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:text="@string/social_media"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2" />

        <View
            android:id="@+id/btn_instagram"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/back_instagram"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_youtube"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="1.0" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            app:layout_constraintBottom_toBottomOf="@+id/btn_instagram"
            app:layout_constraintEnd_toEndOf="@+id/btn_instagram"
            app:layout_constraintStart_toStartOf="@+id/btn_instagram"
            app:layout_constraintTop_toTopOf="@+id/btn_instagram">

            <TextView
                android:id="@+id/txt_instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/instagram"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_instagram"
                android:layout_margin="4dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_instagram" />

        </LinearLayout>

        <View
            android:id="@+id/btn_youtube"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/back_youtube"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_instagram"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            app:layout_constraintBottom_toBottomOf="@+id/btn_youtube"
            app:layout_constraintEnd_toEndOf="@+id/btn_youtube"
            app:layout_constraintStart_toStartOf="@+id/btn_youtube"
            app:layout_constraintTop_toTopOf="@+id/btn_youtube" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/youtube"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_margin="4dp"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_youtube"
                android:layout_margin="4dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_youtube" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>