<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_daneshjooyar"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_margin="94dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_daneshjooyar" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="18dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_daneshjooyar"
        tools:text="ورود یا ثبت نام" />

    <TextView
        android:id="@+id/txt_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="18dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        tools:text="لطفا شماره موبایل خود را وارد کنید" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/number_edt_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:layoutDirection="rtl"
        app:errorIconTint="@null"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_edit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number"
            android:textDirection="rtl"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/clear_edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/number_edt_layout"
        app:layout_constraintTop_toTopOf="@+id/number_edt_layout"
        app:srcCompat="@drawable/ic_clear" />

    <include
        layout="@layout/edit_texts"
        android:id="@+id/edit_texts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_edt_layout"/>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:background="@drawable/back_button"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_text"
        tools:text="تایید و ادامه" />

    <View
        android:id="@+id/false_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#bbffffff"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <TextView
        android:id="@+id/txt_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:text="شرایط و قوانین دانشجویار را مطالعه کردم و میپذیرم." />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="ic_edit,txt_edit" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_request"
        app:srcCompat="@drawable/ic_edit" />

    <TextView
        android:id="@+id/txt_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/edit_number"
        android:textColor="#000080"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ic_edit"
        app:layout_constraintEnd_toStartOf="@+id/ic_edit"
        app:layout_constraintTop_toTopOf="@+id/ic_edit" />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/red"
        android:visibility="gone"
        android:text="@string/text_error_code"
        app:layout_constraintEnd_toEndOf="@+id/edit_texts"
        app:layout_constraintTop_toBottomOf="@+id/edit_texts" />

</androidx.constraintlayout.widget.ConstraintLayout>